# UNO-game

./: .gitattributes  .gitignore  CMakeLists.txt  Changelog.md  Makefile  README.md
.gitea/issue_template/: bug.md  features.md
.gitea/workflows/: push.yaml  release.yaml
src/: baseFunc.c  baseFunc.h  compFunc.c  compFunc.h  main.c  printing.c  printing.h  structures.h
